fixes font-sizes on small devices

--- a/src/components/ButtonStyle.css
+++ b/src/components/ButtonStyle.css
@@ -103,3 +103,15 @@
 .div-buttons {
     margin: 0 50px;
 }
+
+@media screen and (min-width: 401px) and (max-width: 480px) {
+    .Button1, .Button2, .Button3, .Button4, .Button5, .Button6, .Button7, .Button8 {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .Button1, .Button2, .Button3, .Button4, .Button5, .Button6, .Button7, .Button8 {
+        font-size: 12px;
+    }
+}
